# agentic-workflow-template

./: .env.example  CLAUDE.md  Multi_Tier_Agentic_Workflow.md  README.md  pyproject.toml
config/agents/: research_agent.yaml
config/models/: model_registry.yaml
config/policy/: default_rules.yaml
config/prompts/: research_system.txt
config/workflows/: linear_pipeline.yaml
src/shared/: cache.py  contracts.py  exceptions.py
src/tier0_policy/: __init__.py  engine.py  feature_flags.py  registry.py
src/tier1_interface/: auth.py  gateway.py  normalizer.py
src/tier2_orchestrator/: planner.py  quorum_dispatcher.py  router.py  state_machine.py  supervisor.py  workflow_run.py
src/tier3_agents/: base_agent.py
src/tier3_agents/specialists/: research_agent.py
src/tier4_tools/: base_tool.py  gateway.py  policy_gate.py
src/tier5_data/: audit_log.py  lineage.py  vault.py
src/tier5_data/memory/: long_term.py  short_term.py
src/tier6_observability/: guardrails.py  metrics.py  tracing.py
src/tier6_observability/evals/: harness.py
